WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42276
http/tests/loading/preload-slow-loading.php and http/tests/mime/uppercase-mime-type.html fail on Windows
https://bugs.webkit.org/show_bug.cgi?id=42276
Summary
http/tests/loading/preload-slow-loading.php and http/tests/mime/uppercase-mim...
Adam Roben (:aroben)
Reported
2010-07-14 11:42:35 PDT
http/tests/loading/preload-slow-loading.php and http/tests/mime/uppercase-mime-type.html fail on Windows
Attachments
Patch
(1.48 KB, patch)
2010-07-14 11:43 PDT
,
Adam Roben (:aroben)
no flags
Details
Formatted Diff
Diff
Patch
(3.67 KB, patch)
2010-07-19 09:10 PDT
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-07-14 11:43:25 PDT
Created
attachment 61548
[details]
Patch
Adam Roben (:aroben)
Comment 2
2010-07-14 12:49:08 PDT
Committed
r63346
: <
http://trac.webkit.org/changeset/63346
>
Adam Roben (:aroben)
Comment 3
2010-07-14 15:48:58 PDT
Rolled this out in
r63363
.
Adam Roben (:aroben)
Comment 4
2010-07-19 09:10:46 PDT
Created
attachment 61961
[details]
Patch
Adam Roben (:aroben)
Comment 5
2010-07-19 09:22:29 PDT
Committed
r63668
: <
http://trac.webkit.org/changeset/63668
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug