Make urlSuitableForTestResult work for http: URLs, too

Fixes <http://webkit.org/b/42276>
http/tests/loading/preload-slow-loading.php and
http/tests/mime/uppercase-mime-type.html fail on Windows.

Reviewed by Darin Adler.

* DumpRenderTree/win/DumpRenderTree.cpp:
(urlSuitableForTestResult): Don't bail if the URL starts with http://.
We want this function to work for those URLs, too!

Canonical link: https://commits.webkit.org/54195@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63346 268f45cc-cd09-0410-ab3c-d52691b4dbfc